Quelques correctifs : - z-index pour que le tooltip ne s'affiche pas sous l'ascenseur du champ texte sous FF 1.5 - ajout du champ PS - ajout de chaînes de langue pour le titre des aides
git-svn-id: svn://zone.spip.org/spip-zone/_plugins_@7232 ac52e18a-acf5-0310-9fe8-c4428f23b10a

--- a/_dev_/aidejTip/css/global.css
+++ b/_dev_/aidejTip/css/global.css
@@ -37,7 +37,7 @@
 
 #JT {
 	position: absolute;
-	z-index:100;
+	z-index:200;
 	border: 2px solid #CCCCCC;
 	background-color: #fff;
 	font-size:12px;
